# isaac-crowd-sim

./: README.md  dataset.md  package.xml  setup.cfg  setup.py  startup.sh
isaac_crowds_sim/: start_sim.py  start_test.py  waypoint_controller.py
isaac_crowds_sim/assets/: empty_world.usd
isaac_crowds_sim/assets/Kaya/: kaya.usd  kaya_ogn_gamepad.usd
isaac_crowds_sim/assets/airport/: airport.building.yaml  airport.usd  airport_debug.usd
isaac_crowds_sim/assets/daav/: DAAV_Assembly_base.usd  DAAV_Assembly_edit.usd  daav.usd
isaac_crowds_sim/config/: airport_models.csv  asset_size.csv  coordinates.csv  flowchart.md  rviz_config.rviz
isaac_crowds_sim/config/scenes/: crossing-2.json  crossing-2.txt  crossing.json  crossing.txt  one-direction.json  one-direction.txt  random-movement-2.txt  random-movement.json  static-2.txt  static-3.txt  static.json  static.txt  two-direction.json
isaac_crowds_sim/config/scenes-old/: label_test.txt  multi-line-1.txt  multi-line-2.txt  multi-line.json  multi-line.txt  one-direction.json  one-direction.txt  random-movement-2-2.txt  random-movement-2.json  random-movement-2.txt  random-movement.json  single-line.json  single-line.txt  test_movement-3.txt  two-direction.json
isaac_crowds_sim/config/sensors/: OS1_32ch20hz1024res.json  RPLIDAR_S2E.json  (+1 more)
isaac_crowds_sim/patches/: annotator_utils.py  global_character_position_manager.py  navigation_manager.py  nucleus.py  omni.isaac.sim.python.kit  queue.py
isaac_crowds_sim/utils/: character_setup.py  conversion.py  coordinate.py  global_character_positions.py  transformations.py
(+65 files in other folders)
